Update Employee controller

--- a/06tut-express/views/index.html
+++ b/06tut-express/views/index.html
@@ -10,7 +10,8 @@
 </head>
 
 <body>
-    <h1>Index</h1>
+    <h1>Welcome to User and Employees API</h1>
+    <p class="intro">Simple Node js API showcasing CRUD operation.</p>
 </body>
 
 </html>
